refactor: fix conflict